# Backend-on-fastapi

./: .dockerignore  .gitignore  .test.env  Dockerfile  README.md  exercise 1.py  exercise 2.py  pyproject.toml  requirements.txt  run.py  settings.yaml  test.py  test_db.Session.json
.github/workflows/: backend.yml  main-beckend.yml  release-beckend.yml
docker/: .dockerignore  .env.example  Dockerfile  Dockerfile.backend  Dockerfile.frontend  docker-compose.yaml  nginx.conf
scripts/: init_db.py
utils/: __init__.py
utils/api/: cache.py  wotb.py
utils/cache/: redis_cache.py
utils/database/: Mongo.py  __init__.py  admin.py  helper.py
utils/error/: exception.py
utils/interface/: admin.py  clan.py  client.py  dashboard.py  player.py  task.py
utils/interfase/: admin.py  clan.py  player.py
utils/models/: __init__.py  base_models.py  clan.py  configmodel.py  dashboard_model.py  player.py  respnse_model.py  response_model.py  tank.py
utils/server/: app.py  middleware.py
utils/server/admin/: admin.py  schemas.py  task.py
utils/server/api_clan/: api_clan.py
utils/server/api_player/: __init__.py  api_player.py
utils/server/api_socket/: __init__.py  socket_player.py
utils/server/auth/: __init__.py  auth.py
utils/server/client/: client_api.py  schemas.py
utils/service/: calculate_service.py  calculate_time.py
utils/settings/: __init__.py  config.py  logger.py
