[project]
name = "wotblitz"
version = "1.4"
description = "Бекенд для управления сессиями игроков вотблиц"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Ivan", email = "ivanbozhkod@gmail.com" }]

dependencies = [
    "aiohttp>=3.11.11,<4.0.0",
    "motor>=3.6.0,<4.0.0",
    "fastapi[all]>=0.115.6,<1.0.0",
    "asynciolimiter>=1.1.1,<2.0.0",
    "apscheduler>=3.11.0,<4.0.0",
    "sqlalchemy>=2.0.38,<3.0.0",
    "passlib>=1.7.4,<2.0.0",
    "python-jose>=3.4.0,<4.0.0",
    "black>=25.1.0,<26.0.0",
    "aioredis (>=2.0.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
requests = "^2.32.3"
pytest = "^8.3.5"
pytest-dotenv = "^0.5.2"
httpx = "^0.28.1"
pytest-asyncio = "^0.26.0"
asgi-lifespan = "^2.1.0"
pytest-async = "^0.1.1"


[tool.pytest.ini_options]
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
env_files = ["D:\\Mem\\wotblitz-site\\backend\\.test.env"]

